Fix issue where introduce field action in switch case block would create declaration outside of switch statement